--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -83,12 +83,14 @@ header {
     display: inline-block;
     border-radius: 50px;
     font-weight: 400;
+    transition: 1s;
   
     &:hover {
       background-color: rgb(58, 58, 58);
       border-radius: 50px;
       font-weight: 400;
       color: white;
+      transform: scale(1.1);
     }
   }
   
