--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,12 +55,14 @@ header nav ul li {
   text-decoration: none;
   display: inline-block;
   border-radius: 50px;
-  font-weight: 400; }
+  font-weight: 400;
+  transition: 1s; }
   .boton:hover {
     background-color: #3a3a3a;
     border-radius: 50px;
     font-weight: 400;
-    color: white; }
+    color: white;
+    transform: scale(1.1); }
 
 .fixed img {
   width: 60px;
@@ -110,7 +112,10 @@ footer {
     padding: 30px;
     font-size: 30px;
     font-weight: 400;
-    border-radius: 5px; }
+    border-radius: 5px;
+    transition: 8s; }
+    .hero h1:hover {
+      transform: rotateY(360deg); }
 
 .bienvenida {
   margin-left: 45px;
@@ -437,7 +442,10 @@ footer {
     color: white;
     display: flex;
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    transition: 6s; }
+    .tes-seccion .primera:hover, .tes-seccion .atardecer:hover, .tes-seccion .abrazo:hover {
+      transform: rotateY(360deg); }
     .tes-seccion .primera h2, .tes-seccion .atardecer h2, .tes-seccion .abrazo h2 {
       color: #141414;
       font-size: 25px;
@@ -511,7 +519,14 @@ footer {
       margin: 20px 40px;
       display: inline-block;
       border-radius: 55px;
-      font-weight: 400; }
+      font-weight: 400;
+      transition: 1s; }
+      .main-contacto form div .reset:hover {
+        background-color: #3a3a3a;
+        border-radius: 55px;
+        font-weight: 400;
+        color: white;
+        transform: scale(1.1); }
     .main-contacto form div .submit {
       background-color: black;
       color: white;
@@ -520,7 +535,21 @@ footer {
       padding: 15px 40px;
       display: inline-block;
       border-radius: 55px;
-      font-weight: 400; }
+      font-weight: 400;
+      transition: 1s; }
+      .main-contacto form div .submit:hover {
+        background-color: #3a3a3a;
+        border-radius: 55px;
+        font-weight: 400;
+        color: white;
+        transform: scale(1.1); }
+
+/**---------- media query botones -----------**/
+@media screen and (max-width: 991px) {
+  .boton {
+    transition: 1s; }
+    .boton:active {
+      transform: scale(1.1); } }
 
 /**---------- media query index -----------**/
 @media screen and (max-width: 565px) {
