--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -33,6 +33,11 @@ $saber-mas-background: url(../img/tarros-hierbas-te-cuadrado.jpg);
     font-size: 30px;
     font-weight: 400;
     border-radius: 5px;
+    transition: 8s;
+    
+    &:hover {
+      transform: rotateY(360deg);
+    }
   }
 }
 
@@ -118,6 +123,7 @@ $saber-mas-background: url(../img/tarros-hierbas-te-cuadrado.jpg);
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 
   h2 {
     color: $gray;
